# IndieStudio

./: CMakeLists.txt  README.md  README.txt
irrlicht-1.8.4/include/: IrrCompileConfig.h
resources/: Credits.txt
resources/fonts/: menu.xml
resources/fonts/button/: Button.xml
resources/map/: firstmap.mtl  ovalemap.mtl  racingclose1.b3d  secondmap.mtl  trackyoshi.mtl
resources/models/dodge/: dodge-challenger_model.fbx
saves/: save1
src/: AContext.cpp  AContext.hpp  AEventListener.cpp  AEventListener.hpp  Car.hpp  CarFactory.cpp  CarFactory.hpp  Distrib.cpp  Distrib.hpp  Event_Game.cpp  Event_Game.hpp  Game.cpp  Game.hpp  Intro.cpp  Intro.hpp  Lambo.hpp  LibContainer.cpp  LibContainer.hpp  Loading.cpp  Loading.hpp  MapPool.cpp  MapPool.hpp  Menu.cpp  Menu.hpp  MenuEventListener.cpp  MenuEventListener.hpp  Mustang.hpp  MyEventListener.cpp  MyEventListener.hpp  PickUp.hpp  Profile.cpp  Profile.hpp  SAppContext.cpp  SAppContext.hpp  Sound.cpp  Sound.hpp  main.cpp  manette
